fix(api): remove request's body from GET endpoint
Removed request's body from GET endpoints to ensure OpenAPI
standard compliance
